--- a/blog/package.json
+++ b/blog/package.json
@@ -5,12 +5,17 @@
   "main": "index.js",
   "scripts": {
     "build": "browserify src/js/index.js -o src/js/bundle.js",
-    "lint": "standard src/**/*.js --fix"
+    "lint": "standard src/**/*.js --fix",
+    "webpack": "webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "browserify": "^16.5.0",
-    "standard": "^14.3.1"
+    "standard": "^14.3.1",
+    "webpack": "^4.41.5"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.10"
   }
 }
