--- a/targetFlix/package.json
+++ b/targetFlix/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "htm": "^2.2.1",
+    "preact": "^10.2.1",
     "standard": "^14.3.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
