--- a/targetFlix/package.json
+++ b/targetFlix/package.json
@@ -11,6 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/runtime": "^7.8.3",
+    "babel-loader": "^8.0.6",
     "htm": "^2.2.1",
     "preact": "^10.2.1",
     "standard": "^14.3.1",
